--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "gulp": "^4.0.2",
-        "jquery": "^3.4.1"
+        "jquery": "^3.4.1",
+        "jquery-validation": "^1.19.0"
     }
 }
